@@ -1,0 +1,50 @@
+package BCB2007ProjectCreator;
+
+# ************************************************************
+# Description   : The Borland Developer Studio 4 Project Creator
+# Author        : Johnny Willemsen
+# Create Date   : 14/12/2005
+# ************************************************************
+
+# ************************************************************
+# Pragmas
+# ************************************************************
+
+use strict;
+
+use ProjectCreator;
+use WinProjectBase;
+use XMLProjectBase;
+
+use vars qw(@ISA);
+@ISA = qw(XMLProjectBase WinProjectBase ProjectCreator);
+
+# ************************************************************
+# Subroutine Section
+# ************************************************************
+
+sub crlf {
+  #my($self) = shift;
+  return "\n";
+}
+
+
+sub project_file_extension {
+  #my($self) = shift;
+  return '.cbproj';
+}
+
+
+sub get_dll_exe_template_input_file {
+  #my($self) = shift;
+  return 'bcb2007exe';
+}
+
+
+sub get_dll_template_input_file {
+  #my($self) = shift;
+  return 'bcb2007dll';
+}
+
+
+1;
