@@ -1,3 +1,13 @@
+Wed Jun 27 06:27:11 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/USAGE:
+        * modules/BCB2007ProjectCreator.pm:
+        * modules/BCB2007WorkspaceCreator.pm:
+        * templates/bcb2007.mpd:
+        * templates/bcb2007dll.mpt:
+        * templates/bcb2007exe.mpt:
+          New template for C++Builder 2007
+
 Fri May 18 11:17:11 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * MPC version 3.5.0 released.
